<resources>
    <string name="app_name">Sociorail</string>
    <string name="offer_ad_unit_id">ca-app-pub-8571460955599757/3685147921</string>
    <string name="request_ad_unit_id">ca-app-pub-8571460955599757/7075622232</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="enter_receipt_number">Enter receipt number...</string>
    <string name="click_buffer_to_redeem_token">Enter receipt number then\nClick buffer to redeem token...</string>
    <string name="partner_name">Partner name</string>
    <string name="my_name">My name</string>
    <string name="token_number">token number</string>
    <string name="successfully_paired">Successfully paired</string>
    <string name="name">Name</string>
    <string name="name1">Name...</string>
    <string name="email1">Email</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="sex">Sex</string>
    <string name="edit">EDIT</string>
    <string name="save">SAVE</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="validity_date">Validity date</string>
    <string name="location">Location</string>
    <string name="locality">Locality</string>
    <string name="establishment">Establishment</string>
    <string name="lat_latitude_nlong_longitude">Lat: latitude\nLong: longitude</string>
    <string name="address">Address</string>
    <string name="error_address_does_not_match">Error!!! Address does not match</string>
    <string name="enter_offer">enter offer</string>
    <string name="sign_in">sign in</string>
    <string name="emailm">Email...</string>
    <string name="passwordm">Password...</string>
    <string name="back_to_sign_up">Back to sign up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="food_offers">Food offers</string>
    <string name="_18_offers">18+ offers</string>
    <string name="request_sent_please_wait">Request sent please wait...</string>
    <string name="send_request">send request</string>
    <string name="pair_with">Pair with</string>
    <string name="_00_00">00:00</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="pair_with_n_partner">Pair with\n partner</string>
    <string name="sign_up">sign up</string>
    <string name="select_profile_n_pic">select\nprofile\n pic</string>
    <string name="mName">Name...</string>
    <string name="mEmail">Email...</string>
    <string name="phone_no">Phone No. ...</string>
    <string name="password">Password...</string>
    <string name="gender">gender</string>
    <string name="that_s_it">That\'s it...!!</string>
    <string name="already_have_an_account_nsign_in">Already have an account\nSign in</string>
    <string name="no_users_available">No users available...</string>
    <string name="join_list">Join List</string>
    <string name="voomantics">voomantics</string>
    <string name="share_na_meal_n_share_a_moment">Share\na meal\n share a moment!!</string>
    <string name="member">Member</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
</resources>