<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:elevation="2dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/offer_background"
    android:layout_height="200dp">

    <ImageView
        android:id="@+id/offer_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/food_offer" />

    <TextView
        android:id="@+id/offer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/offer_description"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/brown"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/offer_dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/validity_date"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/offer_location"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/location"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/locality"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/locality"
        android:textColor="@color/maroon"
        android:textFontWeight="2000"
        app:layout_constraintBottom_toTopOf="@+id/offer_location"
        app:layout_constraintEnd_toEndOf="@+id/offer_image"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="@+id/offer_image"
        app:layout_constraintTop_toBottomOf="@+id/offer_dates" />

    <TextView
        android:id="@+id/establishment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/establishment"
        android:textFontWeight="1500"
        app:layout_constraintBottom_toTopOf="@+id/offer_description"
        app:layout_constraintEnd_toStartOf="@+id/locality"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_title"
        app:layout_constraintVertical_bias="0.19" />
</androidx.constraintlayout.widget.ConstraintLayout>