<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RedeemTokenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/successfully_paired"
                    android:textAllCaps="true"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/token_no"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_round"
                    android:fontFamily="@font/raleway_semibold"
                    android:text="@string/token_number"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/my_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/my_name"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.226"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.15" />

                    <TextView
                        android:id="@+id/partner_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/partner_name"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.809"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.15" />

                    <ImageView
                        android:id="@+id/my_name_check"
                        android:layout_width="100dp"
                        android:layout_height="100sp"
                        android:background="@drawable/check_field"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/my_name"
                        app:layout_constraintStart_toStartOf="@+id/my_name"
                        app:layout_constraintTop_toBottomOf="@+id/my_name"
                        app:layout_constraintVertical_bias="0.17"
                        app:srcCompat="@drawable/checkx" />

                    <ImageView
                        android:id="@+id/click_redeem"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/check_field"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/partner_name"
                        app:layout_constraintHorizontal_bias="0.434"
                        app:layout_constraintStart_toStartOf="@+id/partner_name"
                        app:layout_constraintTop_toBottomOf="@+id/partner_name"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/checkx" />

                    <ProgressBar
                        android:id="@+id/buffer"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:background="@drawable/check_field"
                        android:theme="@style/ProgressBarStyle"
                        app:layout_constraintBottom_toBottomOf="@+id/click_redeem"
                        app:layout_constraintEnd_toEndOf="@+id/click_redeem"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/click_redeem"
                        app:layout_constraintTop_toTopOf="@+id/click_redeem"
                        app:layout_constraintVertical_bias="1.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/token_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="40sp"
                    android:layout_marginBottom="20sp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/click_buffer_to_redeem_token"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/receipt_number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20sp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/account_edittext"
                    android:ems="10"
                    android:fontFamily="@font/raleway_medium"
                    android:hint="@string/enter_receipt_number"
                    android:inputType="textPersonName"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/cream"
                    android:textSize="20sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>